little error in RDF

--- a/static.html
+++ b/static.html
@@ -496,10 +496,6 @@ property and by individuals. All the terms are hyperlinked to their detailed des
 
 
 
-  | <a href="http://data.agrobiodiversity.org/cco#7Musa">7</a> 
-
-
-
   | <a href="http://data.agrobiodiversity.org/cco#pigmentationOnStyleMusa">Pigmentation on style</a> 
 
 
@@ -3135,7 +3131,7 @@ property and by individuals. All the terms are hyperlinked to their detailed des
 
 <div class="specterm" id="styleBasicColourMusa"><h3>Property: Style basic colour</h3>
 
-   Do not refer to the minute blotches which can be present on the style (Descriptor
+   Do not refer to the minute blotches which can be present on the style<br>1 White <br>2 Cream <br>3 Red-purple<br>4 Other
    <br>
    <br>
    
@@ -3147,36 +3143,6 @@ property and by individuals. All the terms are hyperlinked to their detailed des
     <tr>
     <th>ID:</th>
     <td><a href="http://data.agrobiodiversity.org/cco#styleBasicColourMusa">http://data.agrobiodiversity.org/cco#styleBasicColourMusa</a></td>
-
-    </tr>
-    <tr>
-    <th>Domain:</th>
-    <td><a href="http://data.agrobiodiversity.org/cco#Musa">http://data.agrobiodiversity.org/cco#Musa</a></td>
-
-    </tr>
-
-    <tr>
-    <th>Range:</th>
-    <td><a href="http://www.w3.org/2001/XMLSchema#string">xsd:string</a></td>
-    </tr>
-  </tbody></table>
-   
-</div>
-
-<div class="specterm" id="7Musa"><h3>Property: 7</h3>
-
-   ). <br>1 White <br>2 Cream <br>3 Red-purple<br>4 Other
-   <br>
-   <br>
-   
-   
-   <br><br>
-
-  <table style="th { float: top; }">
-  <tbody>
-    <tr>
-    <th>ID:</th>
-    <td><a href="http://data.agrobiodiversity.org/cco#7Musa">http://data.agrobiodiversity.org/cco#7Musa</a></td>
 
     </tr>
     <tr>
