making it self-html file

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <link href="http://xmlns.com/xmlns-style.css" rel="stylesheet"  type="text/css" />
   <link href="http://smiy.sourceforge.net/css/style.css" rel="stylesheet"  type="text/css" />
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-  <script type="text/javascript" src="turtle.js"></script>
-  <script type="text/javascript" src="mustache-rdf.js"></script>
+  <script type="text/javascript" src="http://bioversity.github.io/cco/turtle.js"></script>
+  <script type="text/javascript" src="http://bioversity.github.io/cco/mustache-rdf.js"></script>
 
 <script>
 $(function(){
@@ -29,6 +29,7 @@ $(function(){
     // and modify them directly
     new MustacheRDF(rdf, ns);
 
+    run();
   })  
 });
 
