forcibly jump to hash after rdf is loaded

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@ function run() {
     $this.attr('id', ids[1]);
   });
   $('title').text($('span.title').text());
+  if(window.location.hash)
+    window.location.hash = window.location.hash;
 }
 
 </script>
