after a second jumping perhaps?

--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@ function run() {
     $this.attr('id', ids[1]);
   });
   $('title').text($('span.title').text());
-  if(window.location.hash)
-    window.location.hash = '#' + window.location.hash;
+  setTimeout(function(){
+    if(window.location.hash)
+      window.location.hash = window.location.hash;
+  }, 1000);
 }
 
 </script>
