--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ function run() {
 </head>
 
 <body>
-  <h1><span class="title">{{cco: dc:title ?o}}</span></h1>
+  <h1><span class="title">{{cco: dc:title ?o}} <i>[DRAFT]</i></span></h1>
   <h2>{{cco: dc:hasVersion ?o}}</h2>
 
 <table width="100%" border="0">
